--- a/index.html
+++ b/index.html
@@ -3,15 +3,68 @@
 
 <head>
     <title>Image Recognition</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 20px;
+        }
+
+        h1 {
+            text-align: center;
+        }
+
+        #image-upload {
+            display: block;
+            margin: 20px auto;
+        }
+
+        #uploaded-image {
+            display: block;
+            margin: 0 auto;
+            max-width: 400px;
+            max-height: 400px;
+            border: 2px solid #ccc;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+        }
+
+        #result {
+            text-align: center;
+            margin-top: 20px;
+        }
+    </style>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.12.0/dist/tf.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/mobilenet@2.0.4/dist/mobilenet.min.js"></script>
 </head>
 
 <body>
-    <input type="file" id="image-upload" accept="image/*">
+    <h1>Image Recognition</h1>
+
+    <input type="file" id="image-upload" accept="image/*" onchange={displayImage(this)}>
+
+    <div>
+        <img id="uploaded-image" src="placeholder.jpg" alt="Uploaded Image">
+    </div>
+
     <div id="result"></div>
 
     <script src="script.js"></script>
+    <script>
+        function displayImage(input) {
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+
+                reader.onload = function (e) {
+                    document.getElementById('uploaded-image').src = e.target.result;
+                }
+
+                reader.readAsDataURL(input.files[0]);
+            } else {
+                document.getElementById('uploaded-image').src = '/placeholder.jpg'; // Replace with your placeholder image path
+            }
+        }
+    </script>
 </body>
 
 </html>
